# pythonprojectprogon

./: README.md  pyproject.toml
data/: transactions.csv
main/: main.py
src/: category_count.py  decorators.py  external_api.py  format_output.py  generators.py  logs  main.py  masks.py  processing.py  product_category.py  read_csv.py  read_xlsx.py  reading_csv_excel.py  reports.py  search_str.py  services.py  test_log.txt  utilts.py  views.py  widget.py
tests/: .env.example  conftest.py  test_decorators.py  test_external_api.py  test_func.py  test_generators.py  test_processing.py  test_reading_csv_excel.py  test_utilts.py
